b=114957 r=rods sr=attinas a=asa Put declarations outside of ifdef.  Fixes some linux optimized builds.